// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CurrencyText /> should render the Currency Text 1`] = `
<CurrencyText
  decimalPlace={2}
  isPrefixFormatted={false}
  prefix="AUD"
  prefixType="display"
  value={1000.499}
>
  <span>
    AUD
     
    1,000.50
  </span>
</CurrencyText>
`;

exports[`<CurrencyText /> should render the Currency Text with 0 as value 1`] = `
<CurrencyText
  decimalPlace={0}
  isPrefixFormatted={false}
  prefix="AUD"
  prefixType="display"
  value={0}
>
  <span>
    AUD
     
    0
  </span>
</CurrencyText>
`;

exports[`<CurrencyText /> should render the Currency Text with isPrefixFormatted being true 1`] = `
.c0 {
  font-size: 24px;
  line-height: 28px;
  font-weight: 600;
  position: relative;
  margin-right: .25rem;
  bottom: .25rem;
}

<CurrencyText
  decimalPlace={0}
  isPrefixFormatted={true}
  prefix="AUD"
  prefixType="display"
  value={1000}
>
  <span>
    <styled.span
      prefixType="display"
    >
      <span
        className="c0"
      >
        AUD
      </span>
    </styled.span>
     
    1,000
  </span>
</CurrencyText>
`;

exports[`<CurrencyText /> should render the Currency Text without value 1`] = `
<CurrencyText
  decimalPlace={0}
  isPrefixFormatted={false}
  prefixType="display"
>
  -
</CurrencyText>
`;
